language and header toggle

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -3,6 +3,8 @@
     "Please scan a clock number barcode to begin" : "Please scan a clock number barcode to begin",
     "Parker Hannifin Day by Hour Application" : "Parker Hannifin Day by Hour Application",
     "Menu" : "Menu",
-    "Log Out" : "Log Out"
+    "Log Out" : "Log Out",
+    "Machine/Cell" : "Machine/Cell",
+    "Day by Hour Tracking" : "Day by Hour Tracking"
 }
 
