--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -3,6 +3,8 @@
     "Please scan a clock number barcode to begin" : "Por favor escanee un código de barras para comenzar",
     "Parker Hannifin Day by Hour Application" : "Aplicación de Día a Día de Parker Hannifin",
     "Menu" : "Menú",
-    "Log Out" : "Salir"
+    "Log Out" : "Salir",
+    "Machine/Cell" : "Máquina/Celda", 
+    "Day by Hour Tracking" : "Seguimiento de Día por Hora"
 }
 
