tooltips and most translations

--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -5,6 +5,25 @@
     "Menu" : "Menú",
     "Log Out" : "Salir",
     "Machine/Cell" : "Máquina/Celda", 
-    "Day by Hour Tracking" : "Seguimiento de Día por Hora"
+    "Day by Hour Tracking" : "Seguimiento de Día por Hora",
+    "Shift Number" : "Número de Turno",
+    "Part Number" : "Número de Parte",
+    "Ideal" : "Esperado",
+    "Target Pcs." : "Objetivo en Piezas",
+    "Actual Pcs." : "Actual en Piezas",
+    "Cumulative Actual Pcs." : "Acumulativo Actual en Piezas",
+    "Downtime (minutes)" : "Tiempo de Falla (Minutos)",
+    "Downtime Reason Code" : "Código de Razón de Tiempo de Falla",
+    "Comments And Actions Taken" : "Comentarios y Acciones Tomadas",
+    "Operator" : "Operador",
+    "Supervisor" : "Supervisor",
+    "Machine Selector" : "Selector de Máquina",
+    "Date Selector" : "Selector de Fecha",
+    "Shift Selector" : "Selector de Turno",
+    "Language Selector" : "Selector de Lenguaje",
+    "Submit" : "Enviar",
+    "Select Language" : "Seleccionar Lenguaje",
+    "Select Machine" : "Seleccionar Máquina",
+    "Select Shift" : "Seleccionar Turno"
 }
 
