--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -36,6 +36,11 @@
     "Shift 2" : "Turno 2",
     "Shift 3" : "Turno 3",
     "All Shifts" : "Todos los Turnos",
-    "Target" : "Meta"
+    "Target" : "Meta",
+    "Enter new communication" : "Ingresar un comentario nuevo201710281758", 
+    "Read More" : "Leer Más",
+    "Intershift Communication" : "Comunicación entre Turnos",
+    "User" : "Usuario", 
+    "Comment" : "Comentario"
 }
 
