major ui changes

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -3,7 +3,7 @@
     "Please scan a clock number barcode to begin" : "Please scan a clock number barcode to begin",
     "Parker Hannifin Day by Hour Application" : "Parker Hannifin Day by Hour Application",
     "Menu" : "Menu",
-    "Log Out" : "Log Out",
+    "Sign Out" : "Sign Out",
     "Machine/Cell" : "Machine/Cell",
     "Day by Hour Tracking" : "Day by Hour Tracking",
     "Shift Number" : "Shift Number",
