--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -3,7 +3,7 @@
     "Please scan a clock number barcode to begin" : "Por favor escanee un código de barras para comenzar",
     "Parker Hannifin Day by Hour Application" : "Aplicación de Día a Día de Parker Hannifin",
     "Menu" : "Menú",
-    "Log Out" : "Salir",
+    "Sign Out" : "Salir",
     "Machine/Cell" : "Máquina/Celda", 
     "Day by Hour Tracking" : "Seguimiento de Día por Hora",
     "Shift Number" : "Número de Turno",
@@ -15,7 +15,7 @@
     "Cumulative Actual" : "Acumulatido Actual",
     "Cumulative Target" : "Acumulativo Meta",
     "Downtime (minutes)" : "Tiempo de Falla (Minutos)",
-    "Downtime Reason Code" : "Código de Razón de Tiempo de Falla",
+    "Downtime Reason Code" : "Código de Tiempo de Falla",
     "Comments And Actions Taken" : "Comentarios y Acciones Tomadas",
     "Operator" : "Operador",
     "Supervisor" : "Supervisor",
@@ -37,7 +37,7 @@
     "Shift 3" : "Turno 3",
     "All Shifts" : "Todos los Turnos",
     "Target" : "Meta",
-    "Enter new communication" : "Ingresar un comentario nuevo201710281758", 
+    "Enter new communication" : "Ingresar un comentario nuevo", 
     "Read More" : "Leer Más",
     "Intershift Communication" : "Comunicación entre Turnos",
     "User" : "Usuario", 
