spinner, changing dummy for endpoint, many changes

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -41,6 +41,8 @@
     "Read More" : "Read More",
     "Intershift Communication" : "Intershift Communication",
     "User" : "User", 
-    "Comment" : "Comment"
+    "Comment" : "Comment",
+    "Enter Reason Code" : "Enter Reason Code",
+    "Time Lost" : "Time Lost"
 }
 
