--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -41,6 +41,8 @@
     "Read More" : "Leer Más",
     "Intershift Communication" : "Comunicación entre Turnos",
     "User" : "Usuario", 
-    "Comment" : "Comentario"
+    "Comment" : "Comentario",
+    "Enter Reason Code" : "Introduzca Código de Razón",
+    "Time Lost" : "Tiempo Perdido"
 }
 
