Adding missing language translate
Adding missing language translate and fix some missing references

--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -1,48 +1,69 @@
 {
     "Welcome to React": "Bienvenido a la aplicacion de React",
-    "Please scan a clock number barcode to begin" : "Por favor escanee un código de barras para comenzar",
-    "Parker Hannifin Day by Hour Application" : "Aplicación de Día a Día de Parker Hannifin",
-    "Menu" : "Menú",
-    "Sign Out" : "Salir",
-    "Machine/Cell" : "Máquina/Celda", 
-    "Day by Hour Tracking" : "Seguimiento de Día por Hora",
-    "Shift Number" : "Número de Turno",
-    "Part Number" : "Número de Parte",
-    "Ideal" : "Esperado",
-    "Target Pcs." : "Objetivo en Piezas",
-    "Actual Pcs." : "Actual en Piezas",
-    "Cumulative Actual Pcs." : "Acumulativo Actual en Piezas",
-    "Cumulative Actual" : "Acumulatido Actual",
-    "Cumulative Target" : "Acumulativo Meta",
-    "Downtime (minutes)" : "Tiempo de Falla (Minutos)",
-    "Downtime Reason Code" : "Código de Tiempo de Falla",
-    "Comments And Actions Taken" : "Comentarios y Acciones Tomadas",
-    "Operator" : "Operador",
-    "Supervisor" : "Supervisor",
-    "Machine Selector" : "Selector de Máquina",
-    "Date Selector" : "Selector de Fecha",
-    "Shift Selector" : "Selector de Turno",
-    "Language Selector" : "Selector de Lenguaje",
-    "Submit" : "Enviar",
-    "Select Language" : "Seleccionar Lenguaje",
-    "Select Machine" : "Seleccionar Máquina",
-    "Select Shift" : "Seleccionar Turno",
-    "Back" : "Atrás",
-    "Next" : "Siguiente",
-    "Page" : "Página",
-    "Of" : "De",
-    "Rows" : "Líneas",
-    "Shift 1" : "Turno 1",
-    "Shift 2" : "Turno 2",
-    "Shift 3" : "Turno 3",
-    "All Shifts" : "Todos los Turnos",
-    "Target" : "Meta",
-    "Enter new communication" : "Ingresar un comentario nuevo", 
-    "Read More" : "Leer Más",
-    "Intershift Communication" : "Comunicación entre Turnos",
-    "User" : "Usuario", 
-    "Comment" : "Comentario",
-    "Enter Reason Code" : "Introduzca Código de Razón",
-    "Time Lost" : "Tiempo Perdido"
+    "Please scan a clock number barcode to begin": "Por favor escanee un código de barras para comenzar",
+    "Parker Hannifin Day by Hour Application": "Aplicación de Día a Día de Parker Hannifin",
+    "Menu": "Menú",
+    "Sign Out": "Salir",
+    "Machine/Cell": "Máquina/Celda",
+    "Day by Hour Tracking": "Seguimiento de Día por Hora",
+    "Shift Number": "Número de Turno",
+    "Part Number": "Número de Parte",
+    "Ideal": "Esperado",
+    "Target Pcs.": "Objetivo en Piezas",
+    "Actual Pcs.": "Actual en Piezas",
+    "Cumulative Actual Pcs.": "Acumulativo Actual en Piezas",
+    "Cumulative Actual": "Acumulatido Actual",
+    "Cumulative Target": "Acumulativo Meta",
+    "Downtime (minutes)": "Tiempo de Falla (Minutos)",
+    "Downtime Reason Code": "Código de Tiempo de Falla",
+    "Comments And Actions Taken": "Comentarios y Acciones Tomadas",
+    "Operator": "Operador",
+    "Supervisor": "Supervisor",
+    "Machine Selector": "Selector de Máquina",
+    "Date Selector": "Selector de Fecha",
+    "Shift Selector": "Selector de Turno",
+    "Language Selector": "Selector de Lenguaje",
+    "Submit": "Enviar",
+    "Select Language": "Seleccionar Lenguaje",
+    "Select Machine": "Seleccionar Máquina",
+    "Select Shift": "Seleccionar Turno",
+    "Back": "Atrás",
+    "Next": "Siguiente",
+    "Page": "Página",
+    "Of": "De",
+    "Rows": "Líneas",
+    "Shift 1": "Turno 1",
+    "Shift 2": "Turno 2",
+    "Shift 3": "Turno 3",
+    "All Shifts": "Todos los Turnos",
+    "Target": "Meta",
+    "Enter new communication": "Ingresar un comentario nuevo",
+    "Read More": "Leer Más",
+    "Intershift Communication": "Comunicación entre Turnos",
+    "User": "Usuario",
+    "Comment": "Comentario",
+    "Enter Reason Code": "Introduzca Código de Razón",
+    "Time Lost": "Tiempo Perdido",
+    "First Shift": "Primer Turno",
+    "Second Shift": "Segundo Turno",
+    "Third Shift": "Tercer Turno",
+    "Previous Shift": "Turno Anterior",
+    "Next Shift": "Siguiente Turno",
+    "Current Value": "Valor Actual",
+    "New Value": "Nuevo Valor",
+    "Date": "Fecha",
+    "There are no comments to display": "No hay comentarios para mostrar",
+    "Enter new comment": "Ingresar un comentario nuevo",
+    "Timelost (Minutes)": "Tiempo Perdido (Minutos)",
+    "Total Timelost": "Total de Tiempo Perdido",
+    "Lunch/Break Time": "Almuerzo/Tiempo de Descanso",
+    "Planned Setup Time": "Tiempo de Configuración Planificado",
+    "Time": "Tiempo",
+    "Timelost Code": "Código de Tiempo Perdido",
+    "Description": "Descripción",
+    "New Timelost Entry": "Nuevo Ingeso de Tiempo Perdido",
+    "Unallocated Timelost": "Timepo Perdido sin asignar",
+    "Time to allocate (minutes)": "Tiempo para asignar (minutos)",
+    "Select Reason Code": "Seleccione un código de razón",
+    "Close": "Cerrar"
 }
-
