Adding words to locale
Adding words to locale

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -65,5 +65,6 @@
     "Unallocated Timelost": "Unallocated Timelost",
     "Time to allocate (minutes)": "Time to allocate (minutes)",
     "Select Reason Code": "Select Reason Code",
+    "Enter Description": "Enter Description",
     "Close": "Close"
 }
