--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -65,5 +65,6 @@
     "Unallocated Timelost": "Timepo Perdido sin asignar",
     "Time to allocate (minutes)": "Tiempo para asignar (minutos)",
     "Select Reason Code": "Seleccione un código de razón",
+    "Enter Description": "Ingrese Descripción",
     "Close": "Cerrar"
 }
