Adding new translate words
Adding new translate words

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -43,7 +43,7 @@
     "User": "User",
     "Comment": "Comment",
     "Enter Reason Code": "Enter Reason Code",
-    "Time Lost": "Time Lost",
+    "Timelost": "Timelost",
     "First Shift": "First Shift",
     "Second Shift": "Second Shift",
     "Third Shift": "Third Shift",
@@ -57,14 +57,29 @@
     "Timelost (Minutes)": "Timelost (Minutes)",
     "Total Timelost": "Total Timelost",
     "Lunch/Break Time": "Lunch/Break Time",
-    "Planned Setup Time": "Planned Setup Time",
+    "Setup Time": "Setup Time",
     "Time": "Time",
     "Timelost Code": "Timelost Code",
+    "Reason": "Reason",
+    "No Timelost entries yet": "No Timelost entries yet",
     "Description": "Description",
     "New Timelost Entry": "New Timelost Entry",
     "Unallocated Timelost": "Unallocated Timelost",
     "Time to allocate (minutes)": "Time to allocate (minutes)",
-    "Select Reason Code": "Select Reason Code",
+    "Search/Select Reason Code": "Search/Select Reason Code",
     "Enter Description": "Enter Description",
-    "Close": "Close"
+    "Close": "Close",
+    "Time Lost (Total Mins)": "Time Lost (Total Mins)",
+    "Comments This Hour": "Comments This Hour",
+    "By clicking Accept you confirm that all the values for this hour are correct": "By clicking 'Accept' you confirm that all the values for this hour are correct",
+    "operator": "Operator",
+    "supervisor": "Supervisor",
+    "administrator": "Administrator",
+    "operator Sign Off": "Operator Sign Off",
+    "Supervisor Sign Off": "Supervisor Sign Off",
+    "Logged in as": "Logged in as",
+    "Accept": "Accept",
+    "Cancel": "Cancel",
+    "New Order": "New Order",
+    "No intershift communications for this shift": "No intershift communications for this shift"
 }
