--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -43,7 +43,7 @@
     "User": "Usuario",
     "Comment": "Comentario",
     "Enter Reason Code": "Introduzca Código de Razón",
-    "Time Lost": "Tiempo Perdido",
+    "Timelost": "Tiempo Perdido",
     "First Shift": "Primer Turno",
     "Second Shift": "Segundo Turno",
     "Third Shift": "Tercer Turno",
@@ -57,14 +57,29 @@
     "Timelost (Minutes)": "Tiempo Perdido (Minutos)",
     "Total Timelost": "Total de Tiempo Perdido",
     "Lunch/Break Time": "Almuerzo/Tiempo de Descanso",
-    "Planned Setup Time": "Tiempo de Configuración Planificado",
+    "Setup Time": "Tiempo de Configuración",
     "Time": "Tiempo",
     "Timelost Code": "Código de Tiempo Perdido",
+    "Reason": "Razón",
+    "No Timelost entries yet": "No hay entradas nuevas de tiempo perdido",
     "Description": "Descripción",
     "New Timelost Entry": "Nuevo Ingeso de Tiempo Perdido",
     "Unallocated Timelost": "Timepo Perdido sin asignar",
     "Time to allocate (minutes)": "Tiempo para asignar (minutos)",
-    "Select Reason Code": "Seleccione un código de razón",
+    "Search/Select Reason Code": "Buscar/Seleccione un código de razón",
     "Enter Description": "Ingrese Descripción",
-    "Close": "Cerrar"
+    "Close": "Cerrar",
+    "Time Lost (Total Mins)": "Tiempo Perdido (Total Min.)",
+    "Comments This Hour": "Comentarios de esta hora",
+    "By clicking Accept you confirm that all the values for this hour are correct": "Presionando 'Aceptar' confirma que todos los valores son correctos para esta hora",
+    "operator": "Operador",
+    "supervisor": "Supervisor",
+    "administrator": "Administrador",
+    "operator Sign Off": "Aprobación del Operador",
+    "supervisor Sign Off": "Aprobación del Supervisor",
+    "Logged in as": "Role de",
+    "Accept": "Aceptar",
+    "Cancel": "Cancelar",
+    "New Order": "Nueva Orden",
+    "No intershift communications for this shift": "No hay comunicación entre turnos para este turno"
 }
