--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -76,7 +76,7 @@
     "supervisor": "Supervisor",
     "administrator": "Administrator",
     "operator Sign Off": "Operator Sign Off",
-    "Supervisor Sign Off": "Supervisor Sign Off",
+    "supervisor Sign Off": "Supervisor Sign Off",
     "Logged in as": "Logged in as",
     "Accept": "Accept",
     "Cancel": "Cancel",
