--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -71,7 +71,7 @@
     "Close": "Close",
     "Time Lost (Total Mins)": "Time Lost (Total Mins)",
     "Comments This Hour": "Comments This Hour",
-    "By clicking Accept you confirm that all the values for this hour are correct": "By clicking 'Accept' you confirm that all the values for this hour are correct",
+    "By clicking 'Accept' you confirm that all the values for this hour are correct": "By clicking 'Accept' you confirm that all the values for this hour are correct",
     "operator": "Operator",
     "supervisor": "Supervisor",
     "administrator": "Administrator",
