--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -71,7 +71,7 @@
     "Close": "Cerrar",
     "Time Lost (Total Mins)": "Tiempo Perdido (Total Min.)",
     "Comments This Hour": "Comentarios de esta hora",
-    "By clicking Accept you confirm that all the values for this hour are correct": "Presionando 'Aceptar' confirma que todos los valores son correctos para esta hora",
+    "By clicking 'Accept' you confirm that all the values for this hour are correct": "Presionando 'Aceptar' confirma que todos los valores son correctos para esta hora",
     "operator": "Operador",
     "supervisor": "Supervisor",
     "administrator": "Administrador",
