Fix translation for some labels in the application
Fix translation for some labels in the application

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -43,7 +43,7 @@
     "User": "User",
     "Comment": "Comment",
     "Enter Reason Code": "Enter Reason Code",
-    "Timelost": "Timelost",
+    "Time Lost": "Time Lost",
     "First Shift": "First Shift",
     "Second Shift": "Second Shift",
     "Third Shift": "Third Shift",
@@ -54,22 +54,22 @@
     "Date": "Date",
     "There are no comments to display": "There are no comments to display",
     "Enter new comment": "Enter new comment",
-    "Timelost (Minutes)": "Timelost (Minutes)",
-    "Total Timelost": "Total Timelost",
+    "Time Lost (Minutes)": "Time Lost (Minutes)",
+    "Total Time Lost": "Total Time Lost",
     "Lunch/Break Time": "Lunch/Break Time",
     "Setup Time": "Setup Time",
     "Time": "Time",
-    "Timelost Code": "Timelost Code",
+    "Time Lost Code": "Time Lost Code",
     "Reason": "Reason",
-    "No Timelost entries yet": "No Timelost entries yet",
+    "No Time Lost entries yet": "No Time Lost entries yet",
     "Description": "Description",
-    "New Timelost Entry": "New Timelost Entry",
-    "Unallocated Timelost": "Unallocated Timelost",
+    "New Time Lost Entry": "New Time Lost Entry",
+    "Unallocated Time Lost": "Unallocated Time Lost",
     "Time to allocate (minutes)": "Time to allocate (minutes)",
     "Search/Select Reason Code": "Search/Select Reason Code",
     "Enter Description": "Enter Description",
     "Close": "Close",
-    "Time Lost (Total Mins)": "Time Lost (Total Mins)",
+    "Time Lost (Total Mins.)": "Time Lost (Total Mins.)",
     "Comments This Hour": "Comments This Hour",
     "By clicking 'Accept' you confirm that all the values for this hour are correct": "By clicking 'Accept' you confirm that all the values for this hour are correct",
     "operator": "Operator",
