--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -43,7 +43,7 @@
     "User": "Usuario",
     "Comment": "Comentario",
     "Enter Reason Code": "Introduzca Código de Razón",
-    "Timelost": "Tiempo Perdido",
+    "Time Lost": "Tiempo Perdido",
     "First Shift": "Primer Turno",
     "Second Shift": "Segundo Turno",
     "Third Shift": "Tercer Turno",
@@ -54,22 +54,22 @@
     "Date": "Fecha",
     "There are no comments to display": "No hay comentarios para mostrar",
     "Enter new comment": "Ingresar un comentario nuevo",
-    "Timelost (Minutes)": "Tiempo Perdido (Minutos)",
-    "Total Timelost": "Total de Tiempo Perdido",
+    "Time Lost (Minutes)": "Tiempo Perdido (Minutos)",
+    "Total Time Lost": "Total de Tiempo Perdido",
     "Lunch/Break Time": "Almuerzo/Tiempo de Descanso",
     "Setup Time": "Tiempo de Configuración",
     "Time": "Tiempo",
-    "Timelost Code": "Código de Tiempo Perdido",
+    "Time Lost Code": "Código de Tiempo Perdido",
     "Reason": "Razón",
-    "No Timelost entries yet": "No hay entradas nuevas de tiempo perdido",
+    "No Time Lost entries yet": "No hay entradas nuevas de tiempo perdido",
     "Description": "Descripción",
-    "New Timelost Entry": "Nuevo Ingeso de Tiempo Perdido",
-    "Unallocated Timelost": "Timepo Perdido sin asignar",
+    "New Time Lost Entry": "Nuevo Ingeso de Tiempo Perdido",
+    "Unallocated Time Lost": "Timepo Perdido sin asignar",
     "Time to allocate (minutes)": "Tiempo para asignar (minutos)",
     "Search/Select Reason Code": "Buscar/Seleccione un código de razón",
     "Enter Description": "Ingrese Descripción",
     "Close": "Cerrar",
-    "Time Lost (Total Mins)": "Tiempo Perdido (Total Min.)",
+    "Time Lost (Total Mins.)": "Tiempo Perdido (Total Min.)",
     "Comments This Hour": "Comentarios de esta hora",
     "By clicking 'Accept' you confirm that all the values for this hour are correct": "Presionando 'Aceptar' confirma que todos los valores son correctos para esta hora",
     "operator": "Operador",
