Change header to first hierarchy
Change header to first hierarchy and create new component to test new view, remove header from dashboard one and import view. Change way to resfresh data and change language

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -81,5 +81,6 @@
     "Accept": "Accept",
     "Cancel": "Cancel",
     "New Order": "New Order",
-    "No intershift communications for this shift": "No intershift communications for this shift"
+    "No intershift communications for this shift": "No intershift communications for this shift",
+    "Parameters": "Parameters"
 }
