--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -92,5 +92,8 @@
     "Recorded Actual": "Recorded Actual",
     "Setup Scrap": "Setup Scrap",
     "Other Scrap": "Other Scrap",
-    "Adjusted Actual": "Adjusted Actual"
+    "Adjusted Actual": "Adjusted Actual",
+    "Go Back To Current Shift": "Go Back To Current Shift",
+    "Go To Current Shift": "Go To Current Shift"
+
 }
