--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -92,5 +92,7 @@
     "Recorded Actual": "Actual Registrado",
     "Setup Scrap": "Desperdicio Configurado",
     "Other Scrap": "Otros Desperdicios",
-    "Adjusted Actual": "Actual Ajustado"
+    "Adjusted Actual": "Actual Ajustado",
+    "Go Back To Current Shift": "Regresar Al Turno Actual",
+    "Go To Current Shift": "Ir Al Turno Actual"
 }
