Adding new words to translate
Adding new words to translate

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -94,6 +94,6 @@
     "Other Scrap": "Other Scrap",
     "Adjusted Actual": "Adjusted Actual",
     "Go Back To Current Shift": "Go Back To Current Shift",
-    "Go To Current Shift": "Go To Current Shift"
-
+    "Go To Current Shift": "Go To Current Shift",
+    "Showing Data for": "Showing Data for"
 }
