--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -94,5 +94,6 @@
     "Other Scrap": "Otros Desperdicios",
     "Adjusted Actual": "Actual Ajustado",
     "Go Back To Current Shift": "Regresar Al Turno Actual",
-    "Go To Current Shift": "Ir Al Turno Actual"
+    "Go To Current Shift": "Ir Al Turno Actual",
+    "Showing Data for": "Mostrando datos para"
 }
