Commit to resolve multiple issues reported
*Use query machine to define the site of the user.
*Fix language error on date display option.
*Change asset logic to display name instance of code.
*Fix manual login to remove the default asset use it.
*Fix login with user 2241. Data was inserting manually so some machines had whitespaces.
*Fix round numbers. Check the UOM to know if we need to round or not.
*Use user id to login into the application, badge and machine are to compare if the generate token is valid for the bring it information.

--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -95,5 +95,6 @@
     "Adjusted Actual": "Adjusted Actual",
     "Go Back To Current Shift": "Go Back To Current Shift",
     "Go To Current Shift": "Go To Current Shift",
-    "Showing Data for": "Showing Data for"
+    "Showing Data for": "Showing Data for",
+    "No Data": "No Data"
 }
