--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -95,5 +95,6 @@
     "Adjusted Actual": "Actual Ajustado",
     "Go Back To Current Shift": "Regresar Al Turno Actual",
     "Go To Current Shift": "Ir Al Turno Actual",
-    "Showing Data for": "Mostrando datos para"
+    "Showing Data for": "Mostrando datos para",
+    "No Data": "Sin Dato"
 }
