added german to languages

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -70,7 +70,7 @@
 "Close":"Schließen",
 "Time Lost (Total Mins.)":"Ausfallzeit (Gesamt in Minuten)",
 "Comments This Hour:":"Kommentare zu dieser Stunde:",
-"By clicking 'Accept' you confirm that all the values for this hour are correct":"Durch das "Bestätigen" versichern Sie, dass alle eingegebenen Werte für diese Stunde korrekt sind.",
+"By clicking 'Accept' you confirm that all the values for this hour are correct":"Durch das Bestätigen versichern Sie, dass alle eingegebenen Werte für diese Stunde korrekt sind.",
 "operator":"Maschineneinrichter/-bediener",
 "supervisor":"Schichtkoordinator",
 "administrator":"Administrator",
