message information and translate new words

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -97,5 +97,6 @@
 "Go Back To Current Shift":"Zurück zur aktuellen Schicht",
 "Go To Current Shift":"Aktuelle Schicht anzeigen",
 "Showing Data for":"Daten Anzeigen für",
-"Please Wait": "Bitte Warten"
+"Please Wait": "Bitte Warten",
+"multiple": "mehrere"
 }
