--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -99,5 +99,6 @@
     "Go To Current Shift": "Go To Current Shift",
     "Showing Data for": "Showing Data for",
     "No Data": "No Data",
-    "Please Wait": "Please Wait"
+    "Please Wait": "Please Wait",
+    "multiple": "multiple"
 }
