--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -99,5 +99,6 @@
     "Go To Current Shift": "Ir Al Turno Actual",
     "Showing Data for": "Mostrando datos para",
     "No Data": "Sin Dato",
-    "Please Wait": "Por favor espere"
+    "Please Wait": "Por favor espere",
+    "multiple": "múltiples"
 }
