--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -98,5 +98,6 @@
     "Go To Current Shift": "Vai al turno attuale",
     "Showing Data for": "Evidenza dati per",
     "No Data": "Nessun Dato",
-    "Please Wait": "Attendi un momento"
+    "Please Wait": "Attendi un momento",
+    "multiple": "più"
 }
